--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <section id="about" class="content-section about-section">
         <div class="container">
-            <h2>The Game's Legacy</h2>
+            <h2>Core Statement</h2>
             
             <p class="game-context">
-                Kingdom Keys draws its inspiration from the grand strategy and negotiation elements found in classic games like *Diplomacy* and *A Game of Thrones: The Board Game*, combined with the resource management and accessible pathway movement of games like *Ticket to Ride* or *Catan*. We aimed to create a mid-to-heavyweight strategy game where player interaction—through alliances, negotiation, and military might—is as crucial as efficient resource optimization and positional play on the clear, provincial map.
-            </p>
+                In this captivating fantasy strategy game, rival players journey across a sprawling realm of many regions, collecting rare tokens to complete their unique quests and be the first to reach ten points—and ultimate victory.
+                 </p>
 
             <div class="trailer-container">
                 <h3>See the Game in Action</h3>
@@ -59,7 +59,8 @@
     <section id="story" class="content-section story-section dark-bg">
         <div class="container">
             <h2>📜 Thematic Backstory: The Shattered Realm</h2>
-            <p>The Kingdom of Aethelgard has known a thousand years of continuous rule, but the passing of the childless King Theron has plunged the realm into a perilous interregnum. The **Royal Keys**—five sacred artifacts representing control over the Treasury, the Military, the Clergy, the Grand Council, and the Free Cities—have been scattered, hidden in secure, powerful strongholds across the kingdom. You are the head of one of the Great Noble Houses: House Lionheart, House Serpent, House Stag, or House Raven. Your goal is not mere territory; it is to leverage your House's unique strengths, gather resources (**Gold**, **Food**, **Influence**), establish control over key provinces, and secure all five of the scattered keys. Only the noble who presents the five Royal Keys to the Royal Capital can be crowned the new monarch.</p>
+            <p>The Kingdom of Aethelgard has known a thousand years of continuous rule, but the passing of the childless King Theron has plunged the realm into a perilous interregnum. The **Royal Keys**—five sacred artifacts representing control over the Treasury, the Military, the Clergy, the Grand Council, and the Free Cities—have been scattered, hidden in secure, powerful strongholds across the kingdom. You are the head of one of the Great Noble Houses: House Lionheart, House Serpent, House Stag, or House Raven. Your goal is not mere territory; it is to leverage your House's unique strengths, gather resources (**Gold**, **Food**, **Influence**), establish control over key provinces, and secure all five of the scattered keys. Only the noble who presents the five Royal Keys to the Royal Capital can be crowned the new monarch.  Kingdom Keys draws its inspiration from the grand strategy and negotiation elements found in classic games like *Diplomacy* and *A Game of Thrones: The Board Game*, combined with the resource management and accessible pathway movement of games like *Ticket to Ride* or *Catan*. We aimed to create a mid-to-heavyweight strategy game where player interaction—through alliances, negotiation, and military might—is as crucial as efficient resource optimization and positional play on the clear, provincial map.
+          </p>
         </div>
     </section>
 
@@ -170,10 +171,11 @@
             <h2 class="logo">KINGDOM KEYS</h2>
             <p>Pre-order your copy today and begin your quest for the crown!</p>
             <a href="[PRE_ORDER_LINK]" class="btn-cta large-btn">CLAIM YOUR COPY</a>
-            <p class="copyright">&copy; 2025 House [Your Team Name]. All Rights Reserved.</p>
+            <p class="copyright">&copy; 2025 [CCS 330 Winter Team 1, Group 28]. All Rights Reserved.</p>
         </div>
     </footer>
 
 </body>
 
 </html>
+
