Fix HTML structure and formatting issues
Url adjustment

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <h3>See the Game in Action</h3>
                 <iframe 
                     width="100%" 
-                    height="450" 
-                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s" 
+                    height="315" 
+                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?modestbranding=1&rel=0&showinfo=0" 
                     title="Kingdom Keys Game Trailer" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
-                <p class="video-note">Video: Approx. 1:45 length, TikTok-style production.</p>
+                
             </div>
         </div>
     </section>
@@ -178,4 +178,5 @@
 </body>
 
 </html>
+
 
