Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -171,12 +171,13 @@
             <h2 class="logo">KINGDOM KEYS</h2>
             <p>Pre-order your copy today and begin your quest for the crown!</p>
             <a href="[PRE_ORDER_LINK]" class="btn-cta large-btn">CLAIM YOUR COPY</a>
-            <p class="copyright">&copy; 2025 [CCS 330 Winter Team 1, Group 28]. All Rights Reserved.</p>
+            <p class="copyright">&copy; 2025 [CCS 330 Winter Term 1, Group 28]. All Rights Reserved.</p>
         </div>
     </footer>
 
 </body>
 
 </html>
+
 
 
