Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <img src="[ICON_URL_LOG]" alt="Playtesting Log Icon">
                     <span>Playtesting Log</span>
                 </a>
-                <a href="[PDF_LINK_MEETING_LOG]" target="_blank" class="document-link">
+                <a href="assets/docs/kingdom_keys_meeting_log.pdf" download="Kingdom_Keys_Meeting_Log" class="document-link">
                     <img src="[ICON_URL_MINUTES]" alt="Meeting Log Icon">
                     <span>Group Meeting Log</span>
                 </a>
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
