--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 <h3>See the Game in Action</h3>
                 <iframe 
                     width="100%" 
-                    height="115" 
-                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?modestbranding=1&rel=0&showinfo=0" 
+                    height="300" 
+                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?rel=0&modestbranding=1" 
                     title="Kingdom Keys Game Trailer" 
+                    scrolling="no"
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
@@ -178,6 +179,7 @@
 </body>
 
 </html>
+
 
 
 
