--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hero-content container">
                 <h2>KINGDOM KEYS</h2>
                 <p class="core-statement">Master the Royal Court, forge powerful alliances, and seize the five legendary keys to claim the crown of Aethelgard.</p>
-                <a href="#preorder" class="btn-cta">PRE-ORDER NOW</a>
+                /*-- <a href="#preorder" class="btn-cta">PRE-ORDER NOW</a> --*/
             </div>
         </div>
     </section>
@@ -44,8 +44,8 @@
                 <h3>See the Game in Action</h3>
                 <iframe 
                     width="100%" 
-                    height="300" 
-                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?rel=0&modestbranding=1" 
+                    height="200" 
+                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?autoplay=0&rel=0&modestbranding=1" 
                     title="Kingdom Keys Game Trailer" 
                     scrolling="no"
                     frameborder="0" 
@@ -179,6 +179,7 @@
 </body>
 
 </html>
+
 
 
 
