--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <h3>See the Game in Action</h3>
                 <iframe 
                     width="100%" 
-                    height="200" 
+                    height="300" 
                     src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?autoplay=0&rel=0&modestbranding=1" 
                     title="Kingdom Keys Game Trailer" 
                     scrolling="no"
                     frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
                 
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
