Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <span>Playtesting Log</span>
                 </a>
                 <a href="assets/docs/kingdom_keys_meeting_log.pdf" download="Kingdom_Keys_Meeting_Log" class="document-link">
-                    <img src="assets/img/meeting_log_icon.png" alt="Meeting Log Icon">
+                    <img src="./assets/img/meeting_log_icon.png" alt="Meeting Log Icon">
                     <span>Group Meeting Log</span>
                 </a>
                 <a href="[PDF_LINK_CONTRIBUTION_LOG]" target="_blank" class="document-link">
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
