Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <figcaption>Distinct House Sigil Pawns</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/img/tokens.jpg" alt="Resource Tokens: Gold, Food, Influence">
+                    <img src="assets/img/tokens.JPG" alt="Resource Tokens: Gold, Food, Influence">
                     <figcaption>Gold, Food, and Influence Tokens</figcaption>
                 </figure>
                 <figure>
@@ -178,6 +178,7 @@
 </body>
 
 </html>
+
 
 
 
