--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <nav class="container">
-            <h1 class="logo"><a href="#hero">KINGDOM KEYS</a></h1>
+            <h1 class="logo"><a href="#hero">KINGDOM FATE</a></h1>
             <ul class="nav-links">
                 <li><a href="#about">The Game</a></li>
                 <li><a href="#story">Story</a></li>
@@ -25,7 +25,7 @@
     <section id="hero" class="hero-section">
         <div class="hero-overlay">
             <div class="hero-content container">
-                <h2>KINGDOM KEYS</h2>
+                <h2>KINGDOM FATE</h2>
                 <p class="core-statement">Master the Royal Court, forge powerful alliances, and seize the five legendary keys to claim the crown of Aethelgard.</p>
             </div>
         </div>
@@ -44,8 +44,8 @@
                 <iframe 
                     width="100%" 
                     height="300" 
-                    src="https://www.youtube.com/watch?v=X6p5AZp7r_Q&t=645s?autoplay=0&rel=0&modestbranding=1" 
-                    title="Kingdom Keys Game Trailer" 
+                    src="https://youtu.be/S9zsQcmwrHA?autoplay=0&rel=0&modestbranding=1" 
+                    title="Kingdom Fate Game Trailer" 
                     scrolling="no"
                     frameborder="0" 
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -78,7 +78,7 @@
                 </div>
                 <div class="pillar-card">
                     <h3>Why: The Experience</h3>
-                    <p>Kingdom Keys delivers a compelling experience of tense political maneuvering and emergent player narratives, where trust is a fragile resource and every move shifts the balance of power.</p>
+                    <p>Kingdom Fate delivers a compelling experience of tense political maneuvering and emergent player narratives, where trust is a fragile resource and every move shifts the balance of power.</p>
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
 
     <footer id="preorder" class="dark-bg">
         <div class="container">
-            <h2 class="logo">KINGDOM KEYS</h2>
+            <h2 class="logo">KINGDOM Fate</h2>
             <p>Pre-order your copy today and begin your quest for the crown!</p>
             <a href="[PRE_ORDER_LINK]" class="btn-cta large-btn">CLAIM YOUR COPY</a>
             <p class="copyright">&copy; 2025 [CCS 330 Winter Term 1, Group 28]. All Rights Reserved.</p>
@@ -186,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
